--- a/kwikearn-frontend/package.json
+++ b/kwikearn-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.6",
     "@fontsource/sora": "^5.2.6",
+    "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
