--- a/kwikearn-frontend/package.json
+++ b/kwikearn-frontend/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.6",
     "@fontsource/sora": "^5.2.6",
+    "@supabase/supabase-js": "^2.39.6",
+    "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
+    "express": "^5.1.0",
     "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
